# libqmatrixclient

./: .travis.yml  CMakeLists.txt  connection.cpp  connection.h  connectionprivate.cpp  connectionprivate.h  encryptionmanager.cpp  encryptionmanager.h  room.cpp  room.h  settings.cpp  settings.h  user.cpp  user.h
cmake/: FindOlm.cmake
events/: event.cpp
jobs/: basejob.cpp  basejob.h  uploaddevicekeys.cpp  uploaddevicekeys.h
lib/: connection.cpp  util.h
